Syncing with v2.13.1 release note repo PR. Removing community notes v2.13.0. Updating nav files for en/zh.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.13/modules/en/pages/release-notes.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-09
+:revdate: 2025-12-16
 :page-revdate: {revdate}
 
 == Current Version
@@ -23,7 +23,7 @@ endif::[]
 | Version | Release Notes | Support Matrix | Prime | Community
 
 | v2.13.0
-| xref:release-notes/v2.13.0.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.13.0[GitHub Release]
+| https://github.com/rancher/rancher/releases/tag/v2.13.0[GitHub Release]
 | N/A
 | N/A
 | &#10003;
