--- a/versions/v2.13/modules/zh/pages/release-notes.adoc
+++ b/versions/v2.13/modules/zh/pages/release-notes.adoc
@@ -1,6 +1,6 @@
 = 发版说明
 :page-languages: [en, zh]
-:revdate: 2025-12-09
+:revdate: 2025-12-16
 :page-revdate: {revdate}
 
 == 当前版本
@@ -21,7 +21,7 @@
 | 版本 | 发版说明 | 支持矩阵 | Prime | Community
 
 | v2.13.0
-| xref:release-notes/v2.13.0.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.13.0[GitHub Release]
+| https://github.com/rancher/rancher/releases/tag/v2.13.0[GitHub Release]
 | N/A
 | N/A
 | &#10003;
