--- a/versions/v2.13/modules/zh/pages/release-notes/v2.13.1.adoc
+++ b/versions/v2.13/modules/zh/pages/release-notes/v2.13.1.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-12-09
+:revdate: 2025-12-16
 :page-revdate: {revdate}
 
 [IMPORTANT]
@@ -27,100 +27,50 @@ endif::[]
 
 Rancher v2.13.1 is the latest patch release of Rancher. This is a Community and Prime version release that introduces maintenance updates and bug fixes. To learn more about Rancher Prime, see our page on the https://www.rancher.com/products/rancher-platform[Rancher Prime Platform].
 
-For more information on new features in the general minor release see the xref:release-notes/v2.13.0.adoc[v2.13.0 release notes].
-
-== Rancher General
-
-=== Features and Enhancements
-
-* Rancher now supports Kubernetes v1.34. See https://github.com/rancher/rancher/issues/51252[#51252] for information on Rancher support for Kubernetes v1.34. You can view the upstream Kubernetes changelogs for https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.34.md[v1.34] for a complete list of changes.
-
-=== Behavior Changes
-
-* Official support for Kubernetes v1.31 and older versions has been removed. You can no longer provision new RKE2 or K3s clusters using the Kubernetes versions that fall outside of the supported range (v1.32 - v1.34). See https://github.com/rancher/rancher/issues/51253[#51253].
-
-=== Major Bug Fixes
-
-* Fixed an issue where the cluster-scoped `v1.ext.cattle.io` APIService was not correctly deleted during a Rancher Helm uninstall, leading to a "dangling" API service. See https://github.com/rancher/rancher/issues/51976[#51976].
+For more information on new features in the general minor release see the https://github.com/rancher/rancher/releases/tag/v2.13.0[v2.13.0 release notes].
 
 == Rancher App (Global UI)
 
-=== Features and Enhancements
-
-* Introduced an optimized view for the Cluster List on the Home Page, powered by Server-Side Pagination (SSP). This enhancement improves the load time and UI experience for users managing a large number of Kubernetes clusters. See https://github.com/rancher/dashboard/issues/15569[#15569] and https://github.com/rancher/dashboard/issues/15570[#15570].
-* Introduced support for dynamic content on the Rancher Manager Home screen, allowing timely information, such as product announcements, new releases, feature highlights, and relevant updates to be displayed upon logging in. See https://github.com/rancher/dashboard/issues/15342[#15342].
-* Rancher Default and Prime themes have been refreshed. See https://github.com/rancher/dashboard/issues/15166[#15166].
-* Introduced a Cron Editor component, providing a user interface for defining and managing CronJob schedules. See https://github.com/rancher/dashboard/issues/14341[#14341].
-
-=== Behavior Changes
-
-* The Rancher UI for provisioning hosted Kubernetes clusters (AKS, EKS, and GKE) has been updated to align with the new Cluster Provisioning v2 (kev2) framework. This change replaces the reliance on the older kontainerdriver (kev1) resources to determine which hosted providers are available for display. The UI now uses a new setting to manage the visibility of these providers, ensuring consistency and future compatibility. See https://github.com/rancher/dashboard/issues/15391[#15391].
-* Rancher's session inactivity logic has been moved from the UI to the backend. A new session TTL setting `auth-user-session-idle-ttl-minutes` was introduced, and it sets the maximum time a user is allowed to be idle within a browser session before the session expires. To enable the idle timeout feature, you must supply `auth-user-session-idle-ttl-minutes` and set it to a value lower than the existing absolute session limit, `auth-user-session-ttl-minutes`. This new backend-driven mechanism, along with its associated TTL setting, replaces the previous session timeout configuration in the UI under *Global Settings* > *Performance*. See https://github.com/rancher/dashboard/issues/12552[#12552].
-
 === Major Bug Fixes
 
-* Fixed an issue where when registering a Rancher Manager instance with SCC, the *Status* field in the Rancher UI failed to update. See https://github.com/rancher/dashboard/issues/14985[#14985].
-* Fixed an issue where when attempting to register Rancher Manager with an invalid SUSE Customer Center (SCC) registration code resulted in a misleading error message and the UI would incorrectly suggest connection issues instead of stating that the Registration Code was invalid. See https://github.com/rancher/dashboard/issues/14940[#14940].
-* Fixed an issue affecting RKE2 clusters provisioned with the Nutanix Node Driver, where editing any cluster setting (like changing the Kubernetes version) would incorrectly modify and clear the `vmNetwork` field in the underlying Nutanix machine pool configuration (setting it to null). This caused the nodes to start reprovisioning and fail with a `nutanix-vm-network cannot be empty` error. See https://github.com/rancher/dashboard/issues/15269[#15269].
-
-=== Known Issues
-
-* In an air-gapped environment, when attempting to access the legacy v3 API-UI page directly via the host URL (`<RANCHER-SERVER-URL>/v3`), the page fails to load and displays a blank page. See https://github.com/rancher/rancher/issues/52790[#52790].
-
-== Authentication
-
-=== Features and Enhancements
-
-* In environments using GitHub, you can configure the new GitHub App authentication provider in Rancher, which allows users to authenticate against a GitHub Organization account using a dedicated https://docs.github.com/en/apps/overview[GitHub App]. This new provider runs alongside the existing standard GitHub authentication provider, offering increased security and better management of permissions based on GitHub Organization teams. See https://github.com/rancher/rancher/issues/50517[#50517].
-* Rancher supports the ability to configure OIDC Single Logout (SLO). See https://github.com/rancher/rancher/issues/49013[#49013].
-* Rancher no longer stores user tokens for the Generic OIDC and Cognito authentication providers. An automatic cleaner has been implemented to remove any previously stored tokens for Generic OIDC and Cognito during the upgrade process. See https://github.com/rancher/rancher/issues/52136[#52136].
-* Rancher now provides Terraform resource support for managing the Generic OIDC authentication provider through Infrastructure as Code (IaC). This enhancement allows users to programmatically configure, enable, and disable Generic OIDC authentication, including setting endpoints, client secrets, and claims mappings, directly using the `rancher2_auth_config_oidc` resource within `terraform-provider-rancher2`. See https://github.com/rancher/rancher/issues/51059[#51059].
+* Fixed an issue where in air-gapped environments when attempting to access the legacy v3 API-UI page directly via the host URL (`<RANCHER-SERVER-URL>/v3`), the page fails to load and displays a blank page. See https://github.com/rancher/rancher/issues/52790[#52790].
 
 == Cluster Provisioning
 
+ifeval::["{build-type}" != "community"]
 === Features and Enhancements
 
-* Rancher now includes initial support for IPv6, providing the foundational capabilities needed to manage clusters using IPv6 addressing. You can deploy Rancher on IPv6-only or dual-stack clusters, and you can provision IPv6-only or dual-stack clusters on Amazon EC2 or DigitalOcean using node drivers, as well as create custom clusters with IPv6 or dual-stack support. See https://github.com/rancher/rancher/issues/49689[#49689].
-* Rancher now uses Rancher Turtles as the default component for providing Cluster API (CAPI) controllers and Custom Resource Definitions (CRDs) necessary for RKE2 and K3s cluster provisioning (v2prov). This change replaces the previous Rancher Provisioning component. Upon upgrade, the Rancher Provisioning chart is automatically uninstalled from the Rancher management cluster and replaced with the Rancher Turtles chart. See https://github.com/rancher/rancher/issues/52254[#52254].
+* The Kubernetes Cluster Autoscaler is available in Rancher Prime version 2.13.1 and higher. It automatically adjusts the size of any configured worker node pools to match the current cluster workload. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/cluster-autoscaler.html[Cluster Autoscaler Prime documentation] for more information. See https://github.com/rancher/rancher/issues/49680[#49680].
+* Rancher Prime v2.13.1 and higher supports Alibaba hosted clusters. Note only Alibaba Managed clusters are supported. Any other type of Alibaba cluster, such as Edge or Serverless, are not supported. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/alibaba-hosted-clusters/setting-up-rancher.html[Alibaba Hosted Cluster Prime documentation] for more information. See https://github.com/rancher/rancher/issues/50153[#50153].
+endif::[]
 
 === Major Bug Fixes
 
-* Fixed an issue where Standard Users assigned the Cluster Owner role on a downstream cluster were unable to view or restore existing etcd snapshots via the Rancher UI. Cluster Owners now have the correct permissions to see and restore snapshots as expected. See https://github.com/rancher/rancher/issues/52307[#52307].
-
-=== Known Issues
-
-* Cluster provisioning is not working as expected in air-gapped Rancher setups due to `capi-controller-manager` not coming up *Active*. See https://github.com/rancher/rancher/issues/52816[#52816]. To resolve this issue, refer to this https://github.com/rancher/rancher/issues/52816#issuecomment-3560265414[workaround].
-* Provisioning or importing an Amazon EKS downstream cluster fails when the Rancher Server is running in an IPv6-only or dual-stack environment. See https://github.com/rancher/rancher/issues/52154[#52154].
-
-== Rancher Webhook
-
-=== Major Bug Fixes
-
-* Fixed an issue related to Project Resource Quotas that led to the incorrect calculation of `usedLimit` values and subsequent admission webhook errors. The webhook validation now correctly checks the new desired quota state against the calculated usage, preventing errors when saving correct limits. `usedLimit` is dropped when a project is new and has no namespaces to prevent persistence of stale or user-provided, bogus values. See https://github.com/rancher/rancher/issues/49041[#49041].
+* Fixed an issue with cluster provisioning not working as expected in air-gapped Rancher setups due to `capi-controller-manager` not coming up **Active**. See https://github.com/rancher/rancher/issues/52833[#52833] and https://github.com/rancher/rancher/issues/52495[#52495] for further information.
 
 == K3s Provisioning
 
+=== Major Bug Fixes
+
+* Fixed an issue where when attempting to provision an IPv6-only K3s cluster (either Custom or Node-Driver) with IPv6 CIDRs, the cluster would become stuck in a provisioning state and does not become **Active**. See https://github.com/rancher/rancher/issues/52860[#52860].
+
+ifeval::["{build-type}" != "community"]
 === Known Issues
 
-* When attempting to provision an IPv6-only K3s cluster (either Custom or Node-Driver) with IPv6 CIDRs, the cluster becomes stuck in a provisioning state and does not become *Active*. This issue will be addressed in RKE2/K3s November 2025 releases that will be made available via corresponding KDM release. See https://github.com/rancher/rancher/issues/51990[#51990].
+* When using Cluster Autoscaler with K3s clusters during node removal while scaling down a `machinePool`, it is possible that a node will be immediately re-added before the pool is resized. This is a race condition and eventually the pool will be reduced to the required size based on the workload. As a workaround, if scale-down operations are noticeably slower, an administrator can reduce the `machinePool` size manually via YAML edit to make Rancher remove the node after which the autoscaler will ignore the old node. See https://github.com/rancher/rancher/issues/52859[#52859].
+endif::[]
 
 == RKE2 Provisioning
 
-=== Known Issues
+=== Major Bug Fixes
 
-* When provisioning a Custom RKE2 cluster where the nodes are configured with IPv6-only addresses, the cluster fails to provision correctly. Specifically, the `rke2-server` service on the etcd-only nodes crashes repeatedly with a fatal error: `runtimes: failed to get runtime classes`. As a result, the etcd node is continually seen flipping between *Waiting for Node Ref* and *Reconciling* status, preventing the cluster from reaching an *Active* state. Fixes will be delivered via the November RKE2/K3s KDM release. See https://github.com/rancher/rancher/issues/51851[#51851].
+* Fixed an issue when provisioning a Custom RKE2 cluster where the nodes are configured with IPv6-only addresses, the cluster would fail to provision correctly. Specifically, the `rke2-server` service on the etcd-only nodes crashes repeatedly with a fatal error: `runtimes: failed to get runtime classes`. As a result, the etcd node is continually seen flipping between **Waiting for Node Ref** and **Reconciling** status, preventing the cluster from reaching an **Active** state. See https://github.com/rancher/rancher/issues/52861[#52861].
 
 == Backup/Restore
 
-=== Known Issues
+=== Features and Enhancements
 
-* When performing a rollback from Rancher v2.13.0 to v2.12.3 using the backup and restore operator (BRO), the restore does not complete successfully. See https://github.com/rancher/backup-restore-operator/issues/844[#844]. To work around this issue, you must scale down your Rancher deployment and uninstall the Webhook chart before performing the restore. For details, refer to this https://support.scc.suse.com/s/kb/Rolling-back-from-Rancher-v2-13-0-to-v2-12-3?language=en_US[Knowledge Base article].
-
-== Continuous Delivery (Fleet)
-
-=== Major Bug Fixes
-
-* Fixed an issue where attempting to uninstall Rancher's Helm chart failed because recent Fleet updates introduced new cronjob resources, and when Rancher adopted the latest version of Fleet, the Rancher uninstall process was not updated to include the cleanup of these new resources. See https://github.com/rancher/rancher/issues/51478[#51478]. To resolve this issue in previously affected versions, apply the workaround detailed in this https://support.scc.suse.com/s/kb/Rancher-Uninstall-via-Helm-release-fails-due-to-post-delete-hook-job-failure?language=en_US[Knowledge Base article].
+* The `rancher/backup-restore-operator` pod now supports the CPU and memory Helm chart resources `requests` and `limits`. See https://github.com/rancher/backup-restore-operator/issues/786[#786].
 
 == Install/Upgrade Notes
 
@@ -129,6 +79,14 @@ If you're installing Rancher for the first time, your environment must fulfill t
 endif::[]
 ifeval::["{build-type}" == "product"]
 If you're installing Rancher for the first time, your environment must fulfill the https://documentation.suse.com/cloudnative/rancher-manager/v2.13/en/installation-and-upgrade/requirements/requirements.html[installation requirements].
+endif::[]
+
+ifeval::["{build-type}" != "community"]
+[IMPORTANT]
+.Chart Name Change for Rancher Prime
+====
+Starting with Rancher Prime v2.13.1, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher v2.13.1 or greater, the chart name you use will be `rancher-prime` instead, for example `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repository.
+====
 endif::[]
 
 [IMPORTANT]
@@ -172,12 +130,6 @@ Rancher now has an enablement option called https://documentation.suse.com/cloud
 endif::[]
 ====
 
-ifeval::["{build-type}" != "community"]
-== Chart Name Change for Rancher Prime
-
-Starting with Rancher Prime v2.13.1+, the chart name has changed from `rancher` to `rancher-prime`. This means when you upgrade or install Rancher 2.13+, the chart name you use will be `rancher-prime` instead, for example `helm install rancher rancher-prime/rancher-prime`. Note that you must first set up the `rancher-prime` chart repo.
-endif::[]
-
 == Changes in Image Artifacts
 
 Image artifact digests are renamed in Rancher v2.12.0, v2.11.4 and v2.10.8. Up until this change, separate image digests files for each operating system and architecture have been maintained for compatibility reasons. With this change, only one file for each operating system is to be provided:
@@ -216,21 +168,34 @@ Please refer to the https://github.com/rancher/rancher#latest-release[README] fo
 
 == Images
 
-* rancher/rancher:v2.13.0
+* rancher/rancher:v2.13.1
 
 == Tools
 
-* CLI - https://github.com/rancher/cli/releases/tag/v2.13.0[v2.13.0]
+* CLI - https://github.com/rancher/cli/releases/tag/v2.13.1[v2.13.1]
 
 == Kubernetes Versions for RKE2/K3s
 
-* v1.34.1 (Default)
-* v1.33.5
-* v1.32.9
+* v1.34.2 (Default)
+* v1.33.6
+* v1.32.10
 
 == Rancher Helm Chart Versions
 
 In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm charts are named with a major version that starts with _100_. This avoids simultaneous upstream changes and Rancher changes from causing conflicting version increments. This also complies with semantic versioning (SemVer), which is a requirement for Helm. You can see the upstream version number of a chart in the build metadata, for example: `100.0.0+up2.1.0`. See https://github.com/rancher/rancher/issues/32294[#32294].
+
+== Previous Rancher Behavior Changes
+
+=== Previous Rancher Behavior Changes - Rancher General
+
+* **Rancher v2.13.0:**
+** Official support for Kubernetes v1.31 and older versions has been removed. You can no longer provision new RKE2 or K3s clusters using the Kubernetes versions that fall outside of the supported range (v1.32 - v1.34). See https://github.com/rancher/rancher/issues/51253[#51253].
+
+=== Previous Rancher Behavior Changes - Rancher App (Global UI)
+
+* **Rancher v2.13.0:**
+** The Rancher UI for provisioning hosted Kubernetes clusters (AKS, EKS, and GKE) has been updated to align with the new Cluster Provisioning v2 (kev2) framework. This change replaces the reliance on the older kontainerdriver (kev1) resources to determine which hosted providers are available for display. The UI now uses a new setting to manage the visibility of these providers, ensuring consistency and future compatibility. See https://github.com/rancher/dashboard/issues/15391[#15391].
+** Rancher's session inactivity logic has been moved from the UI to the backend. A new session TTL setting `auth-user-session-idle-ttl-minutes` was introduced, and it sets the maximum time a user is allowed to be idle within a browser session before the session expires. To enable the idle timeout feature, you must supply `auth-user-session-idle-ttl-minutes` and set it to a value lower than the existing absolute session limit, `auth-user-session-ttl-minutes`. This new backend-driven mechanism, along with its associated TTL setting, replaces the previous session timeout configuration in the UI under **Global Settings** > **Performance**. See https://github.com/rancher/dashboard/issues/12552[#12552].
 
 == Long-standing Known Issues
 
@@ -246,6 +211,8 @@ In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm c
 * Not all cluster tools can be installed on a hardened cluster.
 // no issue number available
 
+* **Rancher v2.13.0:**
+** Provisioning or importing an Amazon EKS downstream cluster fails when the Rancher Server is running in an IPv6-only or dual-stack environment. See [#52154](https://github.com/rancher/rancher/issues/52154).
 * *Rancher v2.8.1:*
 ** When you  attempt to register a new etcd/controlplane node in a CAPR-managed cluster after a failed etcd snapshot restoration, the node can become stuck in a perpetual paused state, displaying the error message `[ERROR]  000 received while downloading Rancher connection information. Sleeping for 5 seconds and trying again`. As a workaround, you can unpause the cluster by running `kubectl edit clusters.cluster clustername -n fleet-default` and set `spec.unpaused` to `false`.  See https://github.com/rancher/rancher/issues/43735[#43735].
 * *Rancher v2.7.2:*
@@ -316,6 +283,8 @@ In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm c
 * When migrating to a cluster with the Rancher Backup feature, the server-url cannot be changed to a different location. It must continue to use the same URL.
 // no issue number
 
+* **Rancher v2.13.0:**
+** When performing a rollback from Rancher v2.13.0 to v2.12.3 using the backup and restore operator (BRO), the restore does not complete successfully. See [#844](https://github.com/rancher/backup-restore-operator/issues/844). To work around this issue, you must scale down your Rancher deployment and uninstall the Webhook chart before performing the restore. For details, refer to this [Knowledge Base article](https://support.scc.suse.com/s/kb/Rolling-back-from-Rancher-v2-13-0-to-v2-12-3?language=en_US).
 * *Rancher v2.7.7:*
 ** Due to the backoff logic in various components, downstream provisioned K3s and RKE2 clusters may take longer to re-achieve *Active* status after a migration. If you see that a downstream cluster is still updating or in an error state immediately after a migration, please let it attempt to resolve itself. This might take up to an hour to complete. See https://github.com/rancher/rancher/issues/34518[#34518] and https://github.com/rancher/rancher/issues/42834[#42834].
 
