Remove reference to v2.13.0.adoc

--- a/versions/v2.13/modules/en/pages/release-notes.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes.adoc
@@ -27,7 +27,7 @@ endif::[]
 
 // DO NOT EDIT THIS LINE, REQUIRED BY RELEASE SCRIPT. PAST VERSIONS.
 | v2.13.0
-| xref:release-notes/v2.13.0.adoc[View] / https://github.com/rancher/rancher/releases/tag/v2.13.0[GitHub Release]
+| https://github.com/rancher/rancher/releases/tag/v2.13.0[GitHub Release]
 | N/A
 | N/A
 | &#10003;
