Adding in v2.13.0 information to v2.13.1 rn
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.1.adoc
@@ -29,17 +29,57 @@ Rancher v2.13.1 is the latest patch release of Rancher. This is a Community and 
 
 For more information on new features in the general minor release see the https://github.com/rancher/rancher/releases/tag/v2.13.0[v2.13.0 release notes].
 
-== Rancher App (Global UI)
+== Rancher General
+
+=== Features and Enhancements
+
+* Rancher now supports Kubernetes v1.34. See https://github.com/rancher/rancher/issues/51252[#51252] for information on Rancher support for Kubernetes v1.34. You can view the upstream Kubernetes changelogs for https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.34.md[v1.34] for a complete list of changes.
+
+=== Behavior Changes
+
+* Official support for Kubernetes v1.31 and older versions has been removed. You can no longer provision new RKE2 or K3s clusters using the Kubernetes versions that fall outside of the supported range (v1.32 - v1.34). See https://github.com/rancher/rancher/issues/51253[#51253].
 
 === Major Bug Fixes
 
+* Fixed an issue where the cluster-scoped `v1.ext.cattle.io` APIService was not correctly deleted during a Rancher Helm uninstall, leading to a "dangling" API service. See https://github.com/rancher/rancher/issues/51976[#51976].
+
+== Rancher App (Global UI)
+
+=== Features and Enhancements
+
+* Introduced an optimized view for the Cluster List on the Home Page, powered by Server-Side Pagination (SSP). This enhancement improves the load time and UI experience for users managing a large number of Kubernetes clusters. See https://github.com/rancher/dashboard/issues/15569[#15569] and https://github.com/rancher/dashboard/issues/15570[#15570].
+* Introduced support for dynamic content on the Rancher Manager Home screen, allowing timely information, such as product announcements, new releases, feature highlights, and relevant updates to be displayed upon logging in. See https://github.com/rancher/dashboard/issues/15342[#15342].
+* Rancher Default and Prime themes have been refreshed. See https://github.com/rancher/dashboard/issues/15166[#15166].
+* Introduced a Cron Editor component, providing a user interface for defining and managing CronJob schedules. See https://github.com/rancher/dashboard/issues/14341[#14341].
+
+=== Behavior Changes
+
+* The Rancher UI for provisioning hosted Kubernetes clusters (AKS, EKS, and GKE) has been updated to align with the new Cluster Provisioning v2 (kev2) framework. This change replaces the reliance on the older kontainerdriver (kev1) resources to determine which hosted providers are available for display. The UI now uses a new setting to manage the visibility of these providers, ensuring consistency and future compatibility. See https://github.com/rancher/dashboard/issues/15391[#15391].
+* Rancher's session inactivity logic has been moved from the UI to the backend. A new session TTL setting `auth-user-session-idle-ttl-minutes` was introduced, and it sets the maximum time a user is allowed to be idle within a browser session before the session expires. To enable the idle timeout feature, you must supply `auth-user-session-idle-ttl-minutes` and set it to a value lower than the existing absolute session limit, `auth-user-session-ttl-minutes`. This new backend-driven mechanism, along with its associated TTL setting, replaces the previous session timeout configuration in the UI under *Global Settings* > *Performance*. See https://github.com/rancher/dashboard/issues/12552[#12552].
+
+=== Major Bug Fixes
+
+* Fixed an issue where when registering a Rancher Manager instance with SCC, the *Status* field in the Rancher UI failed to update. See https://github.com/rancher/dashboard/issues/14985[#14985].
+* Fixed an issue where when attempting to register Rancher Manager with an invalid SUSE Customer Center (SCC) registration code resulted in a misleading error message and the UI would incorrectly suggest connection issues instead of stating that the Registration Code was invalid. See https://github.com/rancher/dashboard/issues/14940[#14940].
+* Fixed an issue affecting RKE2 clusters provisioned with the Nutanix Node Driver, where editing any cluster setting (like changing the Kubernetes version) would incorrectly modify and clear the `vmNetwork` field in the underlying Nutanix machine pool configuration (setting it to null). This caused the nodes to start reprovisioning and fail with a `nutanix-vm-network cannot be empty` error. See https://github.com/rancher/dashboard/issues/15269[#15269].
 * Fixed an issue where in air-gapped environments when attempting to access the legacy v3 API-UI page directly via the host URL (`<RANCHER-SERVER-URL>/v3`), the page fails to load and displays a blank page. See https://github.com/rancher/rancher/issues/52790[#52790].
+
+== Authentication
+
+=== Features and Enhancements
+
+* In environments using GitHub, you can configure the new GitHub App authentication provider in Rancher, which allows users to authenticate against a GitHub Organization account using a dedicated https://docs.github.com/en/apps/overview[GitHub App]. This new provider runs alongside the existing standard GitHub authentication provider, offering increased security and better management of permissions based on GitHub Organization teams. See https://github.com/rancher/rancher/issues/50517[#50517].
+* Rancher supports the ability to configure OIDC Single Logout (SLO). See https://github.com/rancher/rancher/issues/49013[#49013].
+* Rancher no longer stores user tokens for the Generic OIDC and Cognito authentication providers. An automatic cleaner has been implemented to remove any previously stored tokens for Generic OIDC and Cognito during the upgrade process. See https://github.com/rancher/rancher/issues/52136[#52136].
+* Rancher now provides Terraform resource support for managing the Generic OIDC authentication provider through Infrastructure as Code (IaC). This enhancement allows users to programmatically configure, enable, and disable Generic OIDC authentication, including setting endpoints, client secrets, and claims mappings, directly using the `rancher2_auth_config_oidc` resource within `terraform-provider-rancher2`. See https://github.com/rancher/rancher/issues/51059[#51059].
 
 == Cluster Provisioning
 
-ifeval::["{build-type}" != "community"]
 === Features and Enhancements
 
+* Rancher now includes initial support for IPv6, providing the foundational capabilities needed to manage clusters using IPv6 addressing. You can deploy Rancher on IPv6-only or dual-stack clusters, and you can provision IPv6-only or dual-stack clusters on Amazon EC2 or DigitalOcean using node drivers, as well as create custom clusters with IPv6 or dual-stack support. See https://github.com/rancher/rancher/issues/49689[#49689].
+* Rancher now uses Rancher Turtles as the default component for providing Cluster API (CAPI) controllers and Custom Resource Definitions (CRDs) necessary for RKE2 and K3s cluster provisioning (v2prov). This change replaces the previous Rancher Provisioning component. Upon upgrade, the Rancher Provisioning chart is automatically uninstalled from the Rancher management cluster and replaced with the Rancher Turtles chart. See https://github.com/rancher/rancher/issues/52254[#52254].
+ifeval::["{build-type}" != "community"]
 * The Kubernetes Cluster Autoscaler is available in Rancher Prime version 2.13.1 and higher. It automatically adjusts the size of any configured worker node pools to match the current cluster workload. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/cluster-autoscaler.html[Cluster Autoscaler Prime documentation] for more information. See https://github.com/rancher/rancher/issues/49680[#49680].
 * Rancher Prime v2.13.1 and higher supports Alibaba hosted clusters. Note only Alibaba Managed clusters are supported. Any other type of Alibaba cluster, such as Edge or Serverless, are not supported. Refer to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/suse-rancher-prime/alibaba-hosted-clusters/setting-up-rancher.html[Alibaba Hosted Cluster Prime documentation] for more information. See https://github.com/rancher/rancher/issues/50153[#50153].
 endif::[]
@@ -47,6 +87,13 @@ endif::[]
 === Major Bug Fixes
 
 * Fixed an issue with cluster provisioning not working as expected in air-gapped Rancher setups due to `capi-controller-manager` not coming up **Active**. See https://github.com/rancher/rancher/issues/52833[#52833] and https://github.com/rancher/rancher/issues/52495[#52495] for further information.
+* Fixed an issue where Standard Users assigned the Cluster Owner role on a downstream cluster were unable to view or restore existing etcd snapshots via the Rancher UI. Cluster Owners now have the correct permissions to see and restore snapshots as expected. See https://github.com/rancher/rancher/issues/52307[#52307].
+
+== Rancher Webhook
+
+=== Major Bug Fixes
+
+* Fixed an issue related to Project Resource Quotas that led to the incorrect calculation of `usedLimit` values and subsequent admission webhook errors. The webhook validation now correctly checks the new desired quota state against the calculated usage, preventing errors when saving correct limits. `usedLimit` is dropped when a project is new and has no namespaces to prevent persistence of stale or user-provided, bogus values. See https://github.com/rancher/rancher/issues/49041[#49041].
 
 == K3s Provisioning
 
@@ -71,6 +118,12 @@ endif::[]
 === Features and Enhancements
 
 * The `rancher/backup-restore-operator` pod now supports the CPU and memory Helm chart resources `requests` and `limits`. See https://github.com/rancher/backup-restore-operator/issues/786[#786].
+
+== Continuous Delivery (Fleet)
+
+=== Major Bug Fixes
+
+* Fixed an issue where attempting to uninstall Rancher's Helm chart failed because recent Fleet updates introduced new cronjob resources, and when Rancher adopted the latest version of Fleet, the Rancher uninstall process was not updated to include the cleanup of these new resources. See https://github.com/rancher/rancher/issues/51478[#51478]. To resolve this issue in previously affected versions, apply the workaround detailed in this https://support.scc.suse.com/s/kb/Rancher-Uninstall-via-Helm-release-fails-due-to-post-delete-hook-job-failure?language=en_US[Knowledge Base article].
 
 == Install/Upgrade Notes
 
@@ -184,19 +237,6 @@ Please refer to the https://github.com/rancher/rancher#latest-release[README] fo
 
 In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm charts are named with a major version that starts with _100_. This avoids simultaneous upstream changes and Rancher changes from causing conflicting version increments. This also complies with semantic versioning (SemVer), which is a requirement for Helm. You can see the upstream version number of a chart in the build metadata, for example: `100.0.0+up2.1.0`. See https://github.com/rancher/rancher/issues/32294[#32294].
 
-== Previous Rancher Behavior Changes
-
-=== Previous Rancher Behavior Changes - Rancher General
-
-* **Rancher v2.13.0:**
-** Official support for Kubernetes v1.31 and older versions has been removed. You can no longer provision new RKE2 or K3s clusters using the Kubernetes versions that fall outside of the supported range (v1.32 - v1.34). See https://github.com/rancher/rancher/issues/51253[#51253].
-
-=== Previous Rancher Behavior Changes - Rancher App (Global UI)
-
-* **Rancher v2.13.0:**
-** The Rancher UI for provisioning hosted Kubernetes clusters (AKS, EKS, and GKE) has been updated to align with the new Cluster Provisioning v2 (kev2) framework. This change replaces the reliance on the older kontainerdriver (kev1) resources to determine which hosted providers are available for display. The UI now uses a new setting to manage the visibility of these providers, ensuring consistency and future compatibility. See https://github.com/rancher/dashboard/issues/15391[#15391].
-** Rancher's session inactivity logic has been moved from the UI to the backend. A new session TTL setting `auth-user-session-idle-ttl-minutes` was introduced, and it sets the maximum time a user is allowed to be idle within a browser session before the session expires. To enable the idle timeout feature, you must supply `auth-user-session-idle-ttl-minutes` and set it to a value lower than the existing absolute session limit, `auth-user-session-ttl-minutes`. This new backend-driven mechanism, along with its associated TTL setting, replaces the previous session timeout configuration in the UI under **Global Settings** > **Performance**. See https://github.com/rancher/dashboard/issues/12552[#12552].
-
 == Long-standing Known Issues
 
 // Apply same headers as "Major Bug Fixes" but with "Long-standing Known Issues" suffix instead
@@ -287,4 +327,3 @@ In Rancher v2.6.0 and later, in the *Apps & Marketplace* UI, many Rancher Helm c
 ** When performing a rollback from Rancher v2.13.0 to v2.12.3 using the backup and restore operator (BRO), the restore does not complete successfully. See [#844](https://github.com/rancher/backup-restore-operator/issues/844). To work around this issue, you must scale down your Rancher deployment and uninstall the Webhook chart before performing the restore. For details, refer to this [Knowledge Base article](https://support.scc.suse.com/s/kb/Rolling-back-from-Rancher-v2-13-0-to-v2-12-3?language=en_US).
 * *Rancher v2.7.7:*
 ** Due to the backoff logic in various components, downstream provisioned K3s and RKE2 clusters may take longer to re-achieve *Active* status after a migration. If you see that a downstream cluster is still updating or in an error state immediately after a migration, please let it attempt to resolve itself. This might take up to an hour to complete. See https://github.com/rancher/rancher/issues/34518[#34518] and https://github.com/rancher/rancher/issues/42834[#42834].
-
